# crm-store

./: README.md  index.js  package-lock.json  package.json  websocket.js
client/desktop/: CMakeLists.txt
client/desktop/GUI/: CMakeLists.txt  Calculator.cpp  Calculator.h  GUI.pro  main.cpp  mainwindow.cpp  mainwindow.h
client/desktop/GUI/icons/: CMakeLists.txt
client/desktop/GUI/src/screens/Calculator/: Calculator.cpp  Calculator.h
client/desktop/GUI/ui/: calculator.ui  calculator.ui.autosave  clients.cpp  clients.h  clients.ui  ingredients.cpp  ingredients.h  ingredients.ui  mainwindow.ui  orders.cpp  orders.h  orders.ui
client/desktop/src/app/: CMakeLists.txt  main.cpp
client/desktop/src/common/enums/: IngridientsServiceEnums.hpp  MenuServiceEnums.hpp
client/desktop/src/common/structs/: IngridientsServiceStructs.hpp
client/desktop/src/services/inc/: IngridientsService.hpp  MenuService.hpp  OrdersService.hpp
client/desktop/src/services/private/: MenuService.cpp
client/desktop/trace/: index.html
client/desktop/trace/js/: main.js  ws.js
controllers/: ClientController.js  IngredientController.js  MenuController.js  OrderController.js
models/: Client.js  Ingredient.js  Menu.js  MenuIngredient.js  Order.js  User.js
routes/: ClientRouter.js  IngredientRouter.js  MenuRouter.js  OrderRouter.js  UserRouter.js  index.js
server/: index.js  package.json  swagger.js
server/src/models/: Client.js  Ingredient.js
websocket/: index.js
